@@ -16,11 +16,12 @@ use eSTAR::Constants qw/:all/;
 use vars qw/$VERSION @EXPORT @ISA/;
 
 @ISA = qw/Exporter/;
-@EXPORT = qw/ get_option set_option write_option get_nodes 
+@EXPORT = qw/ get_option set_option write_option get_nodes get_node_names
               get_state set_state write_state make_directories
-              get_data_dir get_state_dir get_tmp_dir /;
+              get_data_dir get_state_dir get_tmp_dir
+              get_useragents get_useragent_names /;
 
-'$Revision: 1.16 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
+'$Revision: 1.17 $ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
 
 my $SINGLETON;
 
@@ -381,6 +382,107 @@ sub get_nodes {
    }
    
    return @NODES;
+   
+} 
+
+sub get_node_names {
+   my $self = shift;
+
+   # grab references to single instance objects
+   my $log = eSTAR::Logging::get_reference();
+   my $process = eSTAR::Process::get_reference();
+
+   # grab users home directory and define options filename
+   my $config_file = $self->{CONFIG_FILE}; 
+
+   my $CONFIG = $self->{CONFIG};
+   unless ( defined $CONFIG ) {
+      # can't read/write to options file, bail out
+      my $error = "FatalError: Can not read from $config_file";
+      $log->error( $error );
+      return undef;      
+   } 
+      
+   my %hash = %{$CONFIG->get_block( "nodes" )};
+   #$CONFIG->close();
+   #undef $CONFIG;
+     
+   # loop through configuration hash
+   my @NAMES;
+   foreach my $key ( sort keys %hash ) {
+      # grab the node name from the key value
+      push( @NAMES, $key ); 
+   }
+   
+   return @NAMES;
+
+
+}
+
+sub get_useragents {
+   my $self = shift;
+
+   # grab references to single instance objects
+   my $log = eSTAR::Logging::get_reference();
+   my $process = eSTAR::Process::get_reference();
+
+   # grab users home directory and define options filename
+   my $config_file = $self->{CONFIG_FILE}; 
+
+   my $CONFIG = $self->{CONFIG};
+   unless ( defined $CONFIG ) {
+      # can't read/write to options file, bail out
+      my $error = "FatalError: Can not read from $config_file";
+      $log->error( $error );
+      return undef;      
+   } 
+      
+   my %hash = %{$CONFIG->get_block( "useragents" )};
+   #$CONFIG->close();
+   #undef $CONFIG;
+     
+   # loop through configuration hash
+   my @UAS;
+   foreach my $key ( sort keys %hash ) {
+      # grab the node name from the key value
+      push( @UAS, $hash{$key} ); 
+   }
+   
+   return @UAS;
+   
+} 
+
+
+sub get_useragent_names {
+   my $self = shift;
+
+   # grab references to single instance objects
+   my $log = eSTAR::Logging::get_reference();
+   my $process = eSTAR::Process::get_reference();
+
+   # grab users home directory and define options filename
+   my $config_file = $self->{CONFIG_FILE}; 
+
+   my $CONFIG = $self->{CONFIG};
+   unless ( defined $CONFIG ) {
+      # can't read/write to options file, bail out
+      my $error = "FatalError: Can not read from $config_file";
+      $log->error( $error );
+      return undef;      
+   } 
+      
+   my %hash = %{$CONFIG->get_block( "useragents" )};
+   #$CONFIG->close();
+   #undef $CONFIG;
+     
+   # loop through configuration hash
+   my @UA_NAMES;
+   foreach my $key ( sort keys %hash ) {
+      # grab the node name from the key value
+      push( @UA_NAMES, $key ); 
+   }
+   
+   return @UA_NAMES;
    
 } 
 
